--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode
+
 # Ignore Gradle project-specific cache directory
 .gradle
 
@@ -9,3 +11,13 @@ bin/
 .idea
 
 .settings
+
+# Ignore Java build files 
+
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
