[ RULES ] Added how to use instructions for rules.properties

--- a/src/main/resources/rules/rules.properties
+++ b/src/main/resources/rules/rules.properties
@@ -1,2 +1,8 @@
-cardCreation=Card Creation is composed of the following phases...
-deckManagement=Deck Management is composed of the following phases...
+# This is the properties file for the rules scene.
+# Each entry in this file represents a tab in the rules scene.
+# The key of the entry is the title of the tab and the value is the text displayed in the tab.
+# Be sure to add an image with the same name of the key name in the @images folder.
+# To add a new tab to the rules scene, simply add a new entry to this file with the desired title and text.
+
+CardCreation=Card Creation is composed of the following phases...
+DeckManagement=Deck Management is composed of the following phases...
